finished second task

--- a/Fundamentals-1.html
+++ b/Fundamentals-1.html
@@ -31,5 +31,6 @@
 <h1>JavaScript Fundamentals 1</h1>
 
 <script src="Fundamentals-1.js"></script>
+<script src="Coding-Challenges.js"></script>
 </body>
 </html>
